WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73874
[Qt] [WK2] MiniBrowser assert on startup in debug build after
r101713
https://bugs.webkit.org/show_bug.cgi?id=73874
Summary
[Qt] [WK2] MiniBrowser assert on startup in debug build after r101713
Viatcheslav Ostapenko
Reported
2011-12-05 16:02:15 PST
0 WebCore::KURL::KURL KURL.cpp 332 0xb61c8837 1 CoreIPC::ArgumentCoder<WebCore::ResourceResponse>::decode WebCoreArgumentCodersQt.cpp 74 0xb58864b0 2 CoreIPC::ArgumentDecoder::decode<WebCore::ResourceResponse> ArgumentDecoder.h 89 0xb58614e6 3 CoreIPC::Arguments4<unsigned long long, unsigned long long, WebCore::ResourceRequest, WebCore::ResourceResponse>::decode Arguments.h 203 0xb5a596b9 4 CoreIPC::ArgumentCoder<CoreIPC::Arguments4<unsigned long long, unsigned long long, WebCore::ResourceRequest, WebCore::ResourceResponse> >::decode ArgumentCoder.h 44 0xb5a588df 5 CoreIPC::ArgumentDecoder::decode<CoreIPC::Arguments4<unsigned long long, unsigned long long, WebCore::ResourceRequest, WebCore::ResourceResponse> > ArgumentDecoder.h 89 0xb5a56734 6 CoreIPC::handleMessage<Messages::WebPageProxy::DidSendRequestForResource, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long, unsigned long long, WebCore::ResourceRequest const&, WebCore::ResourceResponse const&)> HandleMessage.h 275 0xb5a52d99 7 WebKit::WebPageProxy::didReceiveWebPageProxyMessage WebPageProxyMessageReceiver.cpp 278 0xb5a4ff4e 8 WebKit::WebPageProxy::didReceiveMessage WebPageProxy.cpp 1529 0xb58f758c 9 WebKit::WebProcessProxy::didReceiveMessage WebProcessProxy.cpp 319 0xb592c790 10 WebKit::WebConnectionToWebProcess::didReceiveMessage WebConnectionToWebProcess.cpp 76 0xb58baabc 11 CoreIPC::Connection::dispatchMessage Connection.cpp 689 0xb583367e 12 CoreIPC::Connection::dispatchMessages Connection.cpp 716 0xb5833846 13 MemberFunctionWorkItem0<CoreIPC::Connection>::execute WorkItem.h 79 0xb583c759 14 RunLoop::performWork RunLoop.cpp 63 0xb583ccdf 15 RunLoop::TimerObject::performWork RunLoopQt.cpp 49 0xb583df4a 16 RunLoop::TimerObject::qt_static_metacall RunLoopQt.moc 48 0xb583e978 17 QMetaCallEvent::placeMetaCall qobject.cpp 529 0xb4073eda 18 QObject::event qobject.cpp 1111 0xb4074afb 19 QApplicationPrivate::notify_helper qapplication.cpp 4080 0xb48c9db0 20 QApplication::notify qapplication.cpp 3497 0xb48c77b3 21 QCoreApplication::notifyInternal qcoreapplication.cpp 823 0xb404c1f5 22 QCoreApplication::sendEvent qcoreapplication.h 208 0xb48bcc4d 23 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1465 0xb404d0db 24 QCoreApplication::sendPostedEvents qcoreapplication.cpp 1335 0xb404cd97 25 QCoreApplication::sendPostedEvents qcoreapplication.h 213 0xb434e9a8 26 QWindowSystemInterface::sendWindowSystemEvents qwindowsysteminterface_qpa.cpp 296 0xb434e76e 27 QEventDispatcherQPA::processEvents qeventdispatcher_qpa.cpp 70 0xb18d76b4 28 QEventLoop::processEvents qeventloop.cpp 149 0xb4049d35 29 QEventLoop::exec qeventloop.cpp 225 0xb4049f96 30 waitForSignal util.cpp 49 0x8053629 31 tst_QQuickWebView::showWebView tst_qquickwebview.cpp 248 0x804fed7 32 tst_QQuickWebView::qt_static_metacall tst_qquickwebview.moc 87 0x805039d 33 QMetaMethod::invoke qmetaobject.cpp 1650 0xb40560a9 34 QMetaObject::invokeMethod qmetaobject.cpp 1192 0xb4055568 35 QMetaObject::invokeMethod qobjectdefs.h 406 0xb4782adc 36 QTest::qInvokeTestMethodDataEntry qtestcase.cpp 1493 0xb47802be 37 QTest::qInvokeTestMethod qtestcase.cpp 1594 0xb47808ac 38 QTest::qInvokeTestMethods qtestcase.cpp 1735 0xb4780f3b 39 QTest::qExec qtestcase.cpp 1956 0xb478150d 40 main tst_qquickwebview.cpp 270 0x80501de Assert faling: ASSERT(url == m_string); "url" is null string, but m_string is not null after parsing. Reverting
r101713
fixes this problem.
Attachments
Patch
(7.20 KB, patch)
2011-12-05 18:14 PST
,
Viatcheslav Ostapenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Viatcheslav Ostapenko
Comment 1
2011-12-05 18:14:33 PST
Created
attachment 117973
[details]
Patch
Benjamin Poulain
Comment 2
2011-12-05 19:27:27 PST
***
Bug 73877
has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 3
2011-12-06 00:39:14 PST
Comment on
attachment 117973
[details]
Patch Clearing flags on attachment: 117973 Committed
r102107
: <
http://trac.webkit.org/changeset/102107
>
WebKit Review Bot
Comment 4
2011-12-06 00:39:19 PST
All reviewed patches have been landed. Closing bug.
Benjamin Poulain
Comment 5
2011-12-06 02:20:43 PST
***
Bug 73896
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug