[Qt] [WK2] MiniBrowser assert on startup in debug build after r101713 https://bugs.webkit.org/show_bug.cgi?id=73874

This change partially reverts r101713 restoring original behaviour for
KUrl creation from empty string and fixes asserts in debug build.

Patch by Viatcheslav Ostapenko <ostapenko.viatcheslav@nokia.com> on 2011-12-06
Reviewed by Alexey Proskuryakov.

No new tests. Tests from r101713 pass.

* platform/KURL.cpp:
(WebCore::KURL::init):
(WebCore::KURL::parse):
* platform/KURL.h:

Canonical link: https://commits.webkit.org/90555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102107 268f45cc-cd09-0410-ab3c-d52691b4dbfc